Update footer image alt text and style

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
 這份紅包是老婆的一點小小心意，請收下這份「家庭最佳 MVP」的專屬壓歲錢！錢不多，但裡面裝滿了對你的崇拜與感謝（還有對大餐的期待）。</div>
 
-    <div class="footer">
-        <img src="footer_sign.png" alt="愛你簽名" class="footer-image">
+  <div class="footer">
+        <img src="footer_sign.png" alt="2026 帶領全家看風景 愛你" class="footer-image" style="max-width: 80%; margin: 0 auto; display: block;">
     </div>
 </div>
 
