Fix footer text for 2026 message

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div class="footer">
         <div class="footer-text">
-            2026 年，請繼續帶領我們全家開車看風景喔！
+            2026 年，請繼續帶領我們全家看風景喔！
             <strong class="footer-love">愛你！</strong>
         </div>
     </div>
