--- a/son.html
+++ b/son.html
@@ -6,26 +6,26 @@
     <title>2025-2026 年度家庭頒獎典禮 - 最可愛兒子</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Noto+Sans+TC:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        /* --- 全域變數 --- */
+        /* --- 全域變數：改為溫馨淺色系 --- */
         :root {
-            --bg-deep: #0e162b;
-            --bg-gradient-top: #1b294f;
-            --accent-orange: #ff9f43;
-            --text-white: #ffffff;
-            --text-gray: #b0c4de;
-            --card-bg: rgba(255, 255, 255, 0.05);
-            --border-glow: 1px solid rgba(255, 159, 67, 0.4);
+            --bg-warm: #fff9f2;         /* 溫暖米白色背景 */
+            --bg-gradient-top: #ffebd2;  /* 頂部輕微橘色漸層 */
+            --accent-orange: #d35400;    /* 深色暖橘，確保在淺色底好讀 */
+            --text-main: #4a3728;        /* 深咖啡色文字，比純黑柔和 */
+            --text-soft: #8d7564;        /* 淺咖啡色輔助文字 */
+            --card-bg: rgba(255, 255, 255, 0.7); /* 半透明白色卡片 */
+            --border-soft: 1px solid rgba(211, 84, 0, 0.2);
         }
 
         body {
             margin: 0;
             padding: 0;
-            background-color: var(--bg-deep);
-            background-image: linear-gradient(to bottom, var(--bg-gradient-top) 0%, var(--bg-deep) 100%);
+            background-color: var(--bg-warm);
+            background-image: linear-gradient(to bottom, var(--bg-gradient-top) 0%, var(--bg-warm) 100%);
             background-attachment: fixed;
-            color: var(--text-white);
+            color: var(--text-main);
             font-family: 'Noto Sans TC', sans-serif;
-            line-height: 1.7;
+            line-height: 1.8; /* 增加行距提升閱讀感 */
             padding-bottom: 60px;
             -webkit-font-smoothing: antialiased;
         }
@@ -47,12 +47,13 @@
         
         .profile-img {
             width: 100%;
-            max-width: 400px;
+            /* 【修正】放大寬度到與容器 (600px) 相同 */
+            max-width: 600px; 
             height: auto;
-            border-radius: 20px;
-            box-shadow: 0 0 25px rgba(255, 159, 67, 0.2);
-            border: 2px solid rgba(255, 159, 67, 0.3);
-            margin-bottom: 20px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(74, 55, 40, 0.1);
+            border: 4px solid #ffffff; /* 增加白邊框像拍立得感 */
+            margin-bottom: 25px;
             object-fit: cover;
             display: block;
             margin-left: auto;
@@ -60,67 +61,64 @@
         }
 
         .main-title {
-            font-size: 1.5rem;
+            font-size: 1.6rem;
             color: var(--accent-orange);
             font-weight: 700;
             margin: 0 0 10px 0;
-            text-shadow: 0 0 10px rgba(255, 159, 67, 0.5);
             letter-spacing: 1px;
             line-height: 1.4;
         }
 
         .award-title {
-            font-size: 1.2rem;
-            color: var(--text-white);
+            font-size: 1.3rem;
+            color: var(--text-main);
             font-weight: 700;
             margin-bottom: 20px;
         }
 
         .content-card {
             background: var(--card-bg);
-            border: var(--border-glow);
-            border-radius: 16px;
-            padding: 20px;
+            border: var(--border-soft);
+            border-radius: 20px;
+            padding: 30px 25px;
             margin-bottom: 25px;
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-            font-size: 1.05rem;
-            color: #eee;
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            box-shadow: 0 8px 30px rgba(74, 55, 40, 0.05);
+            font-size: 1.1rem;
         }
+
         .content-card p {
-            margin-bottom: 1.2em;
+            margin-bottom: 1.5em;
         }
+
         .content-card p:last-child {
             margin-bottom: 0;
         }
+
         .highlight-text {
             color: var(--accent-orange);
             font-weight: bold;
-        }
-        .small-text {
-            font-size: 0.9rem;
-            color: var(--text-gray);
+            background-image: linear-gradient(transparent 70%, #ffeaa7 0); /* 加上手繪感底線 */
         }
 
         .footer {
             text-align: center;
             margin-top: 40px;
-            font-size: 0.8rem;
-            color: var(--text-gray);
-            border-top: 1px solid rgba(255,255,255,0.1);
+            font-size: 0.85rem;
+            color: var(--text-soft);
+            border-top: 1px solid rgba(74, 55, 40, 0.1);
             padding-top: 25px;
-            line-height: 1.8;
         }
 
-        .city-silhouette {
+        /* 底部裝飾：溫馨手繪線條感 */
+        .bottom-decoration {
             position: fixed;
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 60px;
-            background: linear-gradient(to top, var(--bg-deep) 20%, transparent 100%);
-            opacity: 0.8;
+            height: 40px;
+            background: linear-gradient(to top, rgba(211, 84, 0, 0.05), transparent);
             z-index: -1;
             pointer-events: none;
         }
@@ -154,7 +152,7 @@
         </div>
     </div>
     
-    <div class="city-silhouette"></div>
+    <div class="bottom-decoration"></div>
 
 </body>
 </html>
