--- a/son.html
+++ b/son.html
@@ -6,26 +6,23 @@
     <title>2025-2026 年度家庭頒獎典禮 - 最可愛兒子</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&family=Noto+Sans+TC:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        /* --- 全域變數：改為溫馨淺色系 --- */
+        /* --- 全域變數 --- */
         :root {
-            --bg-warm: #fff9f2;         /* 溫暖米白色背景 */
-            --bg-gradient-top: #ffebd2;  /* 頂部輕微橘色漸層 */
-            --accent-orange: #d35400;    /* 深色暖橘，確保在淺色底好讀 */
-            --text-main: #4a3728;        /* 深咖啡色文字，比純黑柔和 */
-            --text-soft: #8d7564;        /* 淺咖啡色輔助文字 */
-            --card-bg: rgba(255, 255, 255, 0.7); /* 半透明白色卡片 */
-            --border-soft: 1px solid rgba(211, 84, 0, 0.2);
+            --bg-white: #ffffff;          /* 改為純白，消除圖片色差 */
+            --accent-orange: #d35400;    /* 深暖橘 */
+            --text-main: #4a3728;        /* 深咖啡色 */
+            --text-soft: #8d7564;        /* 淺咖啡色 */
+            --card-bg: #fffbf7;          /* 卡片改用極淺的米色，增加層次 */
+            --border-soft: 1px solid rgba(211, 84, 0, 0.15);
         }
 
         body {
             margin: 0;
             padding: 0;
-            background-color: var(--bg-warm);
-            background-image: linear-gradient(to bottom, var(--bg-gradient-top) 0%, var(--bg-warm) 100%);
-            background-attachment: fixed;
+            background-color: var(--bg-white); /* 設為純白 */
             color: var(--text-main);
             font-family: 'Noto Sans TC', sans-serif;
-            line-height: 1.8; /* 增加行距提升閱讀感 */
+            line-height: 1.8;
             padding-bottom: 60px;
             -webkit-font-smoothing: antialiased;
         }
@@ -42,18 +39,17 @@
 
         .header-section {
             text-align: center;
-            margin-bottom: 35px;
+            margin-bottom: 30px;
         }
         
         .profile-img {
             width: 100%;
-            /* 【修正】放大寬度到與容器 (600px) 相同 */
             max-width: 600px; 
             height: auto;
-            border-radius: 15px;
-            box-shadow: 0 10px 20px rgba(74, 55, 40, 0.1);
-            border: 4px solid #ffffff; /* 增加白邊框像拍立得感 */
-            margin-bottom: 25px;
+            /* 移除原本的白邊與陰影，讓圖片與背景融合 */
+            border: none; 
+            box-shadow: none; 
+            margin-bottom: 20px;
             object-fit: cover;
             display: block;
             margin-left: auto;
@@ -64,27 +60,25 @@
             font-size: 1.6rem;
             color: var(--accent-orange);
             font-weight: 700;
-            margin: 0 0 10px 0;
+            margin: 0 0 8px 0;
             letter-spacing: 1px;
-            line-height: 1.4;
         }
 
         .award-title {
             font-size: 1.3rem;
             color: var(--text-main);
             font-weight: 700;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
         }
 
+        /* 文字區域底色變化 */
         .content-card {
-            background: var(--card-bg);
+            background-color: var(--card-bg); /* 使用溫柔的米色底 */
             border: var(--border-soft);
-            border-radius: 20px;
-            padding: 30px 25px;
+            border-radius: 24px;
+            padding: 35px 28px;
             margin-bottom: 25px;
-            backdrop-filter: blur(5px);
-            -webkit-backdrop-filter: blur(5px);
-            box-shadow: 0 8px 30px rgba(74, 55, 40, 0.05);
+            box-shadow: 0 4px 20px rgba(74, 55, 40, 0.05); /* 輕微陰影浮現感 */
             font-size: 1.1rem;
         }
 
@@ -99,7 +93,7 @@
         .highlight-text {
             color: var(--accent-orange);
             font-weight: bold;
-            background-image: linear-gradient(transparent 70%, #ffeaa7 0); /* 加上手繪感底線 */
+            background-image: linear-gradient(transparent 70%, #ffeaa7 0);
         }
 
         .footer {
@@ -107,20 +101,7 @@
             margin-top: 40px;
             font-size: 0.85rem;
             color: var(--text-soft);
-            border-top: 1px solid rgba(74, 55, 40, 0.1);
             padding-top: 25px;
-        }
-
-        /* 底部裝飾：溫馨手繪線條感 */
-        .bottom-decoration {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 40px;
-            background: linear-gradient(to top, rgba(211, 84, 0, 0.05), transparent);
-            z-index: -1;
-            pointer-events: none;
         }
     </style>
 </head>
@@ -151,8 +132,6 @@
             &copy; 2026 家庭頒獎典禮. All rights reserved.
         </div>
     </div>
-    
-    <div class="bottom-decoration"></div>
 
 </body>
 </html>
